--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <script src="src/layout/panel/panel.directive.js"></script>
   <script src="src/photo/photo.module.js"></script>
   <script src="src/photo/photo.controller.js"></script>
+  <script src="src/photo/photo-create.controller.js"></script>
 </body>
 </html>
