--- a/src/photo/photo-create.html
+++ b/src/photo/photo-create.html
@@ -1,1 +1,37 @@
-<code>/photo/create</code>
+<h1>Create photo</h1>
+
+<a href="/">Back</a>
+
+<form name="photoCreateForm" novalidate ng-submit="$ctrl.createPhoto()">
+  <div>
+    <label>Title</label>
+    <input name="title" required type="text" ng-maxlength="8" ng-model="$ctrl.photo.title">
+    <span
+      style="color: crimson;"
+      ng-if="photoCreateForm.title.$error.required"
+    >
+      Required field.
+    </span>
+    <span
+      style="color: crimson;"
+      ng-if="photoCreateForm.title.$error.maxlength"
+    >
+      The title is too long.
+    </span>
+  </div>
+
+  <div>
+    <label>URL</label>
+    <input name="url" required type="text" ng-model="$ctrl.photo.url">
+    <span
+      style="color: crimson;"
+      ng-if="photoCreateForm.url.$error.required"
+    >
+      Required field.
+    </span>
+  </div>
+
+  <div>
+    <button ng-disabled="photoCreateForm.$invalid">Save</button>
+  </div>
+</form>
