--- a/src/photo/photo.html
+++ b/src/photo/photo.html
@@ -5,6 +5,8 @@
       type="text"
       ng-model="$ctrl.filter"
       ng-model-options="{ debounce: 500 }">
+
+    <a href="/photo/create/">Add new photo</a>
   </div>
 
   <!-- TODO: add animations on filter change -->
