--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <script src="src/photo/photo.module.js"></script>
   <script src="src/photo/photo.controller.js"></script>
   <script src="src/photo/photo-create.controller.js"></script>
+  <script src="src/photo/photo-update.controller.js"></script>
 </body>
 </html>
