--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="src/layout/panel/panel.directive.js"></script>
   <script src="src/photo/photo.module.js"></script>
   <script src="src/photo/photo.controller.js"></script>
+  <script src="src/photo/photo.service.js"></script>
   <script src="src/photo/photo-create.controller.js"></script>
   <script src="src/photo/photo-update.controller.js"></script>
 </body>
